<resources>
    <string name="app_name">Test_Quiz</string>
    <string name="geography">Geography</string>
    <string name="chemistry">Chemistry</string>
    <string name="physics">Physics</string>
    <string name="math">Math</string>
    <string name="quiz">Quiz</string>
    <string name="questionm_1">x² == 16  x -> ?</string>
    <string name="variantm_1_a">4</string>
    <string name="variantm_1_b">-4</string>
    <string name="variantm_1_c">2</string>
    <string name="variantm_1_d">4  va -4</string>
    <string name="answerm1">4  va -4</string>
    <string name="questionm_2"> 8 – 8/4 * 3 == ?</string>
    <string name="variantm_2_a">2</string>
    <string name="variantm_2_b">18</string>
    <string name="variantm_2_c">16</string>
    <string name="variantm_2_d">4</string>
    <string name="answerm2">2</string>
    <string name="questionm_3">f(x) = 2*x²+1  f(1) -> ?</string>
    <string name="variantm_3_a">3</string>
    <string name="variantm_3_b">5</string>
    <string name="variantm_3_c">1</string>
    <string name="variantm_3_d">4</string>
    <string name="answerm3">3</string>
    <string name="questionm_4"> 1/x = 2  bo\'lsa x -> ?</string>
    <string name="variantm_4_a">4</string>
    <string name="variantm_4_b">2</string>
    <string name="variantm_4_c">0.5</string>
    <string name="variantm_4_d">2.5</string>
    <string name="answerm4">0.5</string>
    <string name="questionm_5"> -3 soni -2 dan qancha kichik ?</string>
    <string name="variantm_5_a">1.5</string>
    <string name="variantm_5_b">-1.5</string>
    <string name="variantm_5_c">2</string>
    <string name="variantm_5_d">manfiy sonlarda bunday tushuncha yo\'q</string>
    <string name="answerm5">manfiy sonlarda bunday tushuncha yo\'q</string>
    <string name="questionm_6">Qaysi biri katta ?  - 15  yoki - 5</string>
    <string name="variantm_6_a">-5</string>
    <string name="variantm_6_b">-15</string>
    <string name="variantm_6_c">5</string>
    <string name="variantm_6_d">15</string>
    <string name="answerm6">-5</string>
    <string name="questionm_7"> Qaysi sonni nolga(0) ko\'paytirsa nol boladi ?</string>
    <string name="variantm_7_a">5</string>
    <string name="variantm_7_b">8</string>
    <string name="variantm_7_c">0</string>
    <string name="variantm_7_d">har qanday sonni</string>
    <string name="answerm7">har qanday sonni</string>
    <string name="questionm_8">To\'g\'ri burchakli uchburchakning bir burchagi doimo </string>
    <string name="variantm_8_a">80°</string>
    <string name="variantm_8_b">20°</string>
    <string name="variantm_8_c">45°</string>
    <string name="variantm_8_d">90°</string>
    <string name="answerm8">90°</string>
    <string name="questionm_9">Uchburchak tomonlariga ko\'ra necha xil bo\'ladi ?</string>
    <string name="variantm_9_a">3</string>
    <string name="variantm_9_b">2</string>
    <string name="variantm_9_c">5</string>
    <string name="variantm_9_d">4</string>
    <string name="answerm9">3</string>
    <string name="questionm_10">Uchburchak burchaklariga ko\'ra necha xil bo\'ladi ?</string>
    <string name="variantm_10_a">5</string>
    <string name="variantm_10_b">2</string>
    <string name="variantm_10_c">3</string>
    <string name="variantm_10_d">4</string>
    <string name="answerm10">3</string>
    <string name="questionm_11">sin30° -> ?</string>
    <string name="variantm_11_a">1</string>
    <string name="variantm_11_b">0.2</string>
    <string name="variantm_11_c">0.5</string>
    <string name="variantm_11_d">0.6</string>
    <string name="answerm11">0.5</string>
    <string name="questionm_12">cos60° -> ?</string>
    <string name="variantm_12_a">0.33</string>
    <string name="variantm_12_b">0.2</string>
    <string name="variantm_12_c">0.5</string>
    <string name="variantm_12_d">0.4</string>
    <string name="answerm12">0.5</string>
    <string name="questionm_13">tg45°  -> </string>
    <string name="variantm_13_a">1</string>
    <string name="variantm_13_b">2</string>
    <string name="variantm_13_c">4</string>
    <string name="variantm_13_d">3</string>
    <string name="answerm13">1</string>
    <string name="questionm_14"> -1 soniga qarama-qarshi son nechchiga teng ?</string>
    <string name="variantm_14_d">1</string>
    <string name="variantm_14_b">-0.5</string>
    <string name="variantm_14_c">-0.1</string>
    <string name="variantm_14_a">-1</string>
    <string name="answerm14">1</string>
    <string name="questionm_15"> -1 soniga teskari son nechchiga teng ?</string>
    <string name="variantm_15_b">-1</string>
    <string name="variantm_15_a">-0.5</string>
    <string name="variantm_15_c">-0.2</string>
    <string name="variantm_15_d">2</string>
    <string name="answerm15">-1</string>
    <string name="questionm_16">Pifagor teoremasi qaysi geometrik shakl uchun ?</string>
    <string name="variantm_16_a">uchburchak</string>
    <string name="variantm_16_b">to\'rtburchak</string>
    <string name="variantm_16_c">aylana</string>
    <string name="variantm_16_d">muntazam oltiburchak</string>
    <string name="answerm16">uchburchak</string>
    <string name="questionm_17">Uchburchakning tomonlari a = 5, b = 4, c = 3 ga teng bo\'lsa yuzasi nechaga teng ?</string>
    <string name="variantm_17_d">6</string>
    <string name="variantm_17_b">4</string>
    <string name="variantm_17_c">12</string>
    <string name="variantm_17_a">8</string>
    <string name="answerm17">6</string>
    <string name="questionm_18">To\'g\'ri to\'rtburchakning tomonlari o\'zaro teng va 3 ga teng bo\'lsa, yuzasi nechaga teng ?</string>
    <string name="variantm_18_a">9</string>
    <string name="variantm_18_b">6</string>
    <string name="variantm_18_c">12</string>
    <string name="variantm_18_d">8</string>
    <string name="answerm18">9</string>
    <string name="questionm_19">Yoyiq burchak necha gradusga teng ?</string>
    <string name="variantm_19_c">180°</string>
    <string name="variantm_19_b">160°</string>
    <string name="variantm_19_a">90°</string>
    <string name="variantm_19_d">45°</string>
    <string name="answerm19">180°</string>
    <string name="questionm_20">Aylanani radiusi 5 ga teng bo\'lsa perimetri nechaga teng ?</string>
    <string name="variantm_20_a">10π</string>
    <string name="variantm_20_b">25π</string>
    <string name="variantm_20_c">12π</string>
    <string name="variantm_20_d">35π</string>
    <string name="answerm20">10π</string>
    <string name="questionm_21">Diametri 20 ga teng bo\'lgan aylanani radiusi nechaga teng?</string>
    <string name="variantm_21_d">10</string>
    <string name="variantm_21_b">16</string>
    <string name="variantm_21_c">20</string>
    <string name="variantm_21_a">5</string>
    <string name="answerm21">10</string>
    <string name="questionm_22">Aylananing radiusi 5 ga teng bo\'lsa, yuzasi nechaga teng ?  </string>
    <string name="variantm_22_a">25π</string>
    <string name="variantm_22_b">16π</string>
    <string name="variantm_22_c">9π</string>
    <string name="variantm_22_d">mavjud emas</string>
    <string name="answerm22">mavjud emas</string>
    <string name="questionm_23">-15 + 25 = ?</string>
    <string name="variantm_23_c">10</string>
    <string name="variantm_23_b">5</string>
    <string name="variantm_23_a">qo\'shib bo\'lmaydi</string>
    <string name="variantm_23_d">25</string>
    <string name="answerm23">10</string>
    <string name="questionm_24">Uchburchakka har doim aylana chizsa bo\'adimi ?</string>
    <string name="variantm_24_a">ha</string>
    <string name="variantm_24_b">yo\'q</string>
    <string name="variantm_24_c">umuman mumkin emas</string>
    <string name="variantm_24_d">bilmadim</string>
    <string name="answerm24">yo\'q</string>
    <string name="questionm_25">Parallelopipedning nechta uchi bor ?</string>
    <string name="variantm_25_a">8</string>
    <string name="variantm_25_b">6</string>
    <string name="variantm_25_c">4</string>
    <string name="variantm_25_d">12</string>
    <string name="answerm25">8</string>
    <string name="questionm_26">Parallelopipedning nechta qirrasi bor ?</string>
    <string name="variantm_26_b">12</string>
    <string name="variantm_26_a">16</string>
    <string name="variantm_26_c">8</string>
    <string name="variantm_26_d">6</string>
    <string name="answerm26">12</string>
    <string name="questionm_27">5 + 2 – 8/2 * 4 = ? </string>
    <string name="variantm_27_a">-9</string>
    <string name="variantm_27_b">16</string>
    <string name="variantm_27_c">9</string>
    <string name="variantm_27_d">8</string>
    <string name="answerm27">-9</string>
    <string name="questionm_28">Ekub(8,9) -> ?</string>
    <string name="variantm_28_d">1</string>
    <string name="variantm_28_b">8</string>
    <string name="variantm_28_c">9</string>
    <string name="variantm_28_a">72</string>
    <string name="answerm28">1</string>
    <string name="questionm_29">Eng kichik tub son -> ?</string>
    <string name="variantm_29_a">2</string>
    <string name="variantm_29_b">1</string>
    <string name="variantm_29_c">3</string>
    <string name="variantm_29_d">5</string>
    <string name="answerm29">2</string>
    <string name="questionm_30">Bo\'luvchilar soni 2 ta bo\'lgan son  …   deyiladi</string>
    <string name="variantm_30_c">Tub</string>
    <string name="variantm_30_b">Murakkab</string>
    <string name="variantm_30_a">Juft</string>
    <string name="variantm_30_d">Toq</string>
    <string name="answerm30">Tub</string>
    <string name="questionf_1">Xalqaro Birliklar sistemasi (XBS) qachon qabul qilingan ?</string>
    <string name="variantf_1_a">1960 - yil</string>
    <string name="variantf_1_b">1963 - yil</string>
    <string name="variantf_1_c">1956 - yil</string>
    <string name="variantf_1_d">1991 - yil</string>
    <string name="answerf1">1960 - yil</string>
    <string name="questionf_2">Eng yengil metal  …</string>
    <string name="variantf_2_a">Kaliy</string>
    <string name="variantf_2_b">Litiy</string>
    <string name="variantf_2_c">Simob</string>
    <string name="variantf_2_d">Xlor</string>
    <string name="answerf2">Litiy</string>
    <string name="questionf_3">O\'girlik kichi oyda ko\'pmi yoki yerda ?</string>
    <string name="variantf_3_a">Oyda</string>
    <string name="variantf_3_b">Yerda</string>
    <string name="variantf_3_c">Bir xil</string>
    <string name="variantf_3_d">Taqqosalb bo\'lmaydi</string>
    <string name="answerf3">Yerda</string>
    <string name="questionf_4">Erkin tushish tezlanishi qayerda eng katta ? </string>
    <string name="variantf_4_a">Ekvatorda</string>
    <string name="variantf_4_b">45° kenglikda</string>
    <string name="variantf_4_c">Qutb</string>
    <string name="variantf_4_d">Hamma joyda bir xil</string>
    <string name="answerf4">Qutb</string>
    <string name="questionf_5">Massa tushunchasini fanga kim kiritgan ?</string>
    <string name="variantf_5_a">Faradey</string>
    <string name="variantf_5_b">Nyuton</string>
    <string name="variantf_5_c">Arximed</string>
    <string name="variantf_5_d">Beruniy</string>
    <string name="answerf5">Nyuton</string>
    <string name="questionf_6">Atmosfera bosimini kim birinchi bolib aniqlagan ?</string>
    <string name="variantf_6_a">Faradey</string>
    <string name="variantf_6_b">Nyuton</string>
    <string name="variantf_6_c">Torricheli</string>
    <string name="variantf_6_d">Eyshten</string>
    <string name="answerf6">Torricheli</string>
    <string name="questionf_7">Absolyut nol temperatura qiymati °C ga teng ?</string>
    <string name="variantf_7_a">0 °C</string>
    <string name="variantf_7_b"> -273°C</string>
    <string name="variantf_7_c"> Aslida bunday tempratura mavjud emas</string>
    <string name="variantf_7_d">-1°C</string>
    <string name="answerf7">-273°C</string>
    <string name="questionf_8">Musbat zaryad bu  …</string>
    <string name="variantf_8_a">neytron</string>
    <string name="start_quiz">start quiz</string>
</resources>