<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_math"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/quizicon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_fileName="main.json"
        android:layout_marginTop="60dp"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/choose_topic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quizicon"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_topic"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/mathLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="centerInside"
                android:src="@drawable/mathicon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/math"
                android:textColor="#0189F5"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/physicsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/phy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/physics"
                android:textColor="#0189F5"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/chemistryLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@drawable/kimyo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/chemistry"
                android:textColor="#0189F5"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/geographyLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/back"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:scaleType="centerInside"
                android:src="@drawable/globusicon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/geography"
                android:textColor="#0189F5"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startQuizBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/back_2"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/start_quiz"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>